instructions.Instructions.scala.error
Compilation error:
Instructions:1: error: not found: value baisserbrosse
baisserbrosse()
^Instructions:9: error: not found: value leverbrosse
leverbrosse()
^