instructions.Instructions.scala.code
baisserbrosse()
avance()
avance()
droite()
droite()
recule()
recule()
gauche()
leverbrosse()
avance()

